@@ -7,6 +7,7 @@ Cacti CHANGELOG
 -issue#1260: Tabs should now display correctly in classic mode when TrueType is not available
 -issue#1261: Automatic logout should not fire when using Web Basic Authentication
 -issue#1263: Create utility to audit the Cacti schema for issues
+-issue#1266: Correct graphWrapper usage so all graphs are correctly displayed
 -issue#1268: Regex filters will now correctly filter
 -issue#1274: Host CPU script checks value prescence to prevent unnecessary errors
 -issue#1275: Fix issues with authPriv not supplying username/password
